--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <h2>Galactic Network © All Rights Reserved</h2>
     <script>
     var urlObj = new window.URL(window.location.href);
-    var url = "https://SurfTheWeb-V3.jordanservices.repl.co/main.html";
+    var url = "https://v3.surfthewebofficial.ml/main.html";
 
     if (url) {
         var win;
